# curriculum-curator

./: .env.development  .env.example  .env.production  .gitignore  .pre-commit-config.yaml  .pypirc.template  404.html  ARCHIVE_README.md  AUTHORS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  MANIFEST.in  PHASE_1_SPECS.md  README.md  TESTING.md  TEST_RESULTS.md  TODO.md  TOP_PRIORITIES.md  backend.sh  config.yaml  curriculum-curator-design.md  demo-electron.sh  docker-compose.complex.yml  docker-compose.yml  docker-entrypoint.sh  frontend.sh  index.html  mypy.ini  netlify-token.txt  package-lock.json  package.json  pyproject.toml  quick-test.md  (+7 more)
.github/workflows/: ci.yml  desktop-release.yml
adr/0004-interactive-workflow-builder/: index.html
adr/0005-interactive-interfaces/: index.html
adr/template/: index.html
api/: index.html
api/config/: index.html
backend/: .gitignore  CODING_STANDARDS.md  Dockerfile  EMAIL_SETUP.md  EMAIL_SETUP_GUIDE.md  EMAIL_SOLUTIONS.md  README.md  TECHNICAL_DEBT.md  TECHNOLOGY_CHOICES.md  VERIFICATION_WORKAROUNDS.md  add_research_tables.py  add_unit_constraint.py  check_db.py  create_admin.py  curriculum_curator.db.backup_20250822_155323  curriculum_curator.db.backup_20250822_163208  curriculum_curator.db.backup_20250822_170121  curriculum_curator.db.backup_20250822_171122  curriculum_curator.db.backup_20250822_171149  curriculum_curator.db.backup_20250822_171415  curriculum_curator.db.backup_20250822_172432  curriculum_curator.db.backup_20250822_172716  curriculum_curator.db.backup_20250822_182250  curriculum_curator.db.backup_20250822_182520  curriculum_curator.db.backup_20250822_182548  curriculum_curator.db.backup_20250822_183135  generate_verification_codes.py  init_db.py  migrate_course_to_unit.py  pyproject.toml  pytest.ini  pytest_no_ratelimit.ini  rename_course_to_unit.py  requirements.txt  reset_database.py  run_server.py  run_tests.sh  run_tests_no_ratelimit.py  setup_email.py  setup_whitelist.py  (+10 more)
cli/: index.html
curriculum_curator/: cli.py  core.py  interactive.py
deploy/: .env.example  docker-compose.yml
design-addendum/: index.html
desktop/: electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.json
docker/: nginx.conf  start.sh  supervisord.conf
docs/: IDEAS.md  LRD-content-creation-system-v1.0.md  POSITIONING.md  README.md  SECURITY.md  TECHNICAL_DEBT_TRACKING.md  acceptance-tests.md  architecture-deepening.md  claude-code-guide-prompts.md  code-audit-2026-04-11.md  common-cartridge-import.html  common-cartridge-import.md  design-addendum.md  export-implementation-plan.md  implementation-plan.md  implementation-roadmap.md  index.md  instructional-design-workflow.md  outline-import-plan.md  search-hardening-plan.md  speaker-notes-plan.md  structured-import-plan.md  udl-audit-feature-brief.md  user-stories.md
e2e/: .env.test  README.md  global-setup.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
electron/: package-lock.json  package.json  preload.js
examples/: run_minimal_module.py
frontend/: .gitignore  .prettierignore  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  revert_to_camelcase.py  tailwind.config.js  tsconfig.json  tsconfig.node.json  update_course_to_unit.py  vite.config.js  vitest.config.ts
guides/: index.html
reference/: README.md  architecture-insights.md  lessons-learned.md  llm-integration-patterns.md  validation-plugins-design.md  workflow-patterns.md
scripts/: bump-version.sh
src/: App.css  App.tsx  SimpleApp.tsx  TestApp.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/docs/: batch-export-system.md  branding-customization.md  quarto-integration.md
src-tauri/examples/: batch_export.rs  branding_customization.rs  quarto_integration.rs  template_showcase.rs
src-tauri/migrations/: 001_initial_schema.sql
src-tauri/src/: commands.rs  database.rs  lib.rs  main.rs  state.rs
src-tauri/src/backup/: commands.rs  mod.rs  scheduler.rs  service.rs
src-tauri/src/content/: batch_commands.rs  batch_generator.rs  context_manager.rs  generator.rs  learning_objectives.rs  mod.rs  module_generator.rs  pedagogical.rs  progress_tracker.rs  prompt_templates.rs  templates.rs  workflow.rs  workflow_commands.rs  workflow_steps.rs
src-tauri/src/data_export/: commands.rs  formats.rs  mod.rs  service.rs
src-tauri/src/export/: batch.rs  converters.rs  html.rs  manager.rs  markdown.rs  mod.rs  pdf.rs  powerpoint.rs  quarto.rs  word.rs
src-tauri/src/file_manager/: commands.rs  mod.rs  operations.rs  storage.rs
src-tauri/src/git/: commands.rs  mod.rs  service.rs
src-tauri/src/import/: analysis.rs  commands.rs  enhancement.rs  mod.rs  parsers.rs  service.rs
src-tauri/src/llm/: claude.rs  factory.rs  gemini.rs  manager.rs  mod.rs  offline.rs  ollama.rs  openai.rs  providers.rs  rate_limiter.rs  routing.rs  secure_storage.rs
src-tauri/src/maintenance/: commands.rs  config.rs  mod.rs  reports.rs  scheduler.rs  service.rs
src-tauri/src/session/: commands.rs  mod.rs  storage.rs
src-tauri/src/validation/: built_in.rs  commands.rs  dry_run.rs  dry_run_commands.rs  factory.rs  feedback_commands.rs  feedback_system.rs  manager.rs  mod.rs  remediation.rs  remediation_commands.rs  smart_config.rs  smart_config_commands.rs  validators.rs
tasks/: content-creation-workflow-improvements.md  git-migration-tasks.md  mvp-content-creation-flow.md  p3-remaining-implementation-plan.md  prd-weekly-curriculum-generator.md  tasks-prd-curriculum-curator.md  tasks-prd-weekly-curriculum-generator.md
test_files/: .gitignore  sample_course.pptx  sample_curriculum.docx  sample_curriculum.md
tests/: conftest.py
tui/: index.html
web/: index.html  package-lock.json
(+1039 files in other folders)
