[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "curriculum-curator"
version = "0.1.0"
authors = [
    {name = "Curriculum Curator Team", email = "example@example.com"},
]
description = "An educational content workflow orchestration tool for LLM integration"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Topic :: Education",
    "Topic :: Text Processing",
]

dependencies = [
    "python-frontmatter>=1.0.0",
    "pyyaml>=6.0",
    "structlog>=23.1.0",
    "litellm>=1.0.0",
    "backoff>=2.2.1",
    "scikit-learn>=1.2.0",
    "typer[all]>=0.9.0",
    "rich>=13.3.0",
    "markdown>=3.4.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.0.262",
    "mkdocs>=1.4.3",
    "mkdocs-material>=9.1.8",
    "twine>=4.0.2",
    "build>=0.10.0",
]

web = [
    "fasthtml>=0.2.0",
]

[project.urls]
"Homepage" = "https://github.com/teaching-repositories/curriculum-curator"
"Bug Tracker" = "https://github.com/teaching-repositories/curriculum-curator/issues"
"Documentation" = "https://github.com/teaching-repositories/curriculum-curator/blob/main/docs"

[project.scripts]
curator = "curriculum_curator.cli:main"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]